tests/expectations/parser/program/stub_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'function', 'inline', 'program', 'script', 'transition' -- found 'stub'
    --> test:7:1
     |
   7 | stub credits.aleo {
     | ^^^^
